welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {


	def posFinale(){
		var H = getMondeHauteur();
		var L = getMondeLargeur();
	if( getX()==L && getY()==H){
		return true;
	}else{
		return false;
	}
}
var c = 0;
while(!posFinale()){
		ecritmessage();
		c=c+1;
		if(getX()==6){
			setPos(0,getY()+1)
		}else{
			setPos(getX()+1,getY())
		}
}

}
